<resources>
    <string name="app_name">点餐</string>
    <string name="action_settings">Settings</string>
    <string name="str_login_failed">登录失败</string>
    <string name="str_login_succeed">登录成功</string>
    <string name="out_login">退出登录</string>
    <string name="clock_in">打卡</string>
    <string name="club_card">会员卡</string>
    <string name="subscribe">预约</string>
    <string name="record">流水</string>
    <string name="gift_card">礼品卡</string>
    <string name="sys_setting">设置</string>
    <string name="home_halleat">堂食</string>
    <string name="home_take_out">外送</string>
    <string name="home_wait">等取</string>
    <string name="home_change_order">找单</string>
    <string name="home_get">来取</string>
    <string name="home_till">钱箱</string>
    <string name="home_price">价格</string>
    <string name="home_time_old">时长</string>
    <string name="home_id">单号</string>
    <string name="home_time">时间</string>
    <string name="home_number">人数</string>
    <string name="home_status">状态</string>
    <string name="home_order">启台</string>
    <string name="home_customer_name">顾客姓名</string>
    <string name="str_home">首页</string>
    <string name="str_more">更多</string>


    <string name="pre_order_report">报表</string>
    <string name="pre_order_language">语言</string>

    <string name="tv_order">订单</string>
    <string name="tv_menu_type1">全部菜单</string>
    <string name="tv_menu_type2">促销活动</string>
    <string name="tv_menu_type3">菜单1</string>

    <string name="order_customer_info">顾客信息</string>
    <string name="order_change_table">换桌</string>
    <string name="order_personer_num">人数</string>
    <string name="order_pre_type">下单类型</string>
    
    <string name="order_menu">菜单</string>
    <string name="search_menu">搜索菜单</string>
    <string name="self_menu">自定义菜</string>

    <string name="preorder_divide_line">分割线</string>
    <string name="preorder_plus">加1</string>
    <string name="preorder_num">数量</string>
    <string name="preorder_reduce">减1</string>
    <string name="preorder_sauce">调味</string>
    <string name="preorder_rechange_price">改价</string>

    <string name="preorder_no_food">您未选择菜品</string>
    <string name="choose_customer_num">选择用餐人数</string>
    <string name="self_food_num">自定义人数</string>
    <string name="start_preorder">开始点餐</string>
    <string name="change_start_order">修改启台</string>
    
    <string name="add_remarks">添加备注</string>
    <string name="please_input_remarks_info">请输入备注信息</string>
    <string name="please_input_remarks_money">请输入备注金额</string>
    <string name="choose_food_num">编辑菜品数量</string>
    <string name="input_food_num">请输入菜品数量</string>
    <string name="input_recharge_num">请输入充值数量</string>

    <string name="sure">确定</string>

    <string name="no_choose_food_tip">请选择要改变的菜肴</string>
    <string name="no_reduce_food">此菜肴您不能再减了</string>

    <string name="delete_food_tip">请选择要删除的菜肴</string>

    <string name="total_price">总计: $</string>
    <string name="tax_price"> (税: $</string>
    <string name="total">共</string>
    <string name="piece_total">种 共</string>
    <string name="goods_tip">个商品</string>

    <string name="preorder_exit">退出</string>
    <string name="preorder_delete">删除</string>
    <string name="preorder_save">保存</string>
    <string name="preorder_pay">付款</string>
    <string name="preorder_go_kitchen">送厨</string>

    <string name="order_orderid">订单号: </string>
    <string name="search_orderid">订单编号</string>

    <string name="order_edit">编辑</string>
    <string name="order_print_list">打单</string>
    <string name="order_separate_list">分单</string>
    <string name="order_discount">折扣</string>
    <string name="order_plus_get">加收</string>

    <string name="please_input_tel">请输入用户电话号码</string>
    <string name="please_input_customer">请输入用户名</string>
    <string name="please_input_address">请输入地址</string>
    <string name="please_input_room_number">请输入房号</string>
    <string name="please_input_city">请输入城市</string>
    <string name="please_input_province">请输入省份</string>
    <string name="please_input_code">请输入邮编</string>
    <string name="please_input_vipcard">请输入卡号</string>
    <string name="please_input_remarks">请输入备注内容</string>
    <string name="please_input_surname">请输入您的姓氏</string>
    <string name="please_input_email">请输入您的邮箱</string>
    <string name="please_input_customer_num">请选择就餐人数</string>

    <string name="remarks">备注</string>
    <string name="province">省份</string>
    <string name="zip_code">邮编</string>
    <string name="city">城市</string>
    <string name="address">地址</string>
    <string name="room_number">房号</string>
    <string name="name">姓名</string>
    <string name="tel">电话</string>
    <string name="delivery">外送</string>
    <string name="back">返回</string>
    <string name="go_order">点单</string>
    <string name="username">名字</string>
    <string name="birth">生日</string>

    <string name="get_find">找到</string>
    <string name="get_order_num">份订单</string>
    <string name="get_total_price">总计: $</string>
    <string name="get_history">历史</string>
    <string name="please_input_userinfo">请输入用户信息</string>
    
    <string name="get_go_order">启单: </string>
    <string name="get_table_number">桌号: </string>
    <string name="get_time">时间: </string>
    <string name="get_price">金额: </string>
    <string name="person">人</string>

    <string name="vip_card">会员卡</string>
    <string name="entity_card">实体卡</string>
    <string name="add_vip_card">添加会员卡</string>
    <string name="vip_card_id">卡号</string>
    <string name="back_home">返回首页</string>
    <string name="search">查找</string>
    <string name="surname">姓氏</string>
    <string name="email">邮箱</string>
    <string name="balance">余额</string>
    <string name="history_balance">历史余额</string>
    <string name="integral">积分</string>
    <string name="register_date">注册日期:</string>
    <string name="exit">取消</string>
    <string name="add_other_info">+添加其他信息</string>
    <string name="add_vip">返回添加主要信息</string>
    <string name="to">至</string>
    <string name="use_integral">可用积分</string>

    <string name="hello_day">认真工作的一天</string>
    <string name="rest">休息</string>
    <string name="call_a_day">收工</string>
    <string name="change_table">换桌</string>
    <string name="order_type">新单 </string>
    <string name="unsave">未保存</string>
    <string name="idle">空闲</string>
    <string name="pleasr_choose_food">请选择菜肴</string>
    <string name="table">桌</string>
    <string name="total_report">总报表</string>
    <string name="staff_record">员工工时记录</string>

    <string name="search_order_time">订单时间</string>
    <string name="search_order_status">订单状态</string>
    <string name="search_order_style">订单类型</string>
    <string name="search_order_mode">付款方式</string>
    <string name="search_order_price">折扣与费用</string>
    <string name="search_order_local">用餐区</string>
    <string name="search_order_delivery">配送员</string>
    <string name="search_order_person">点单员</string>

    <string name="text_Myinfo_day">日</string>
    <string name="text_Myinfo_month">月</string>
    <string name="text_Myinfo_years">年</string>
    <string name="text_change_cancle">取消</string>
    <string name="text_change_ok">完成</string>
    <string name="choose_time">请选择时间</string>

    <string name="vip_incomplete">请完整填写会员卡</string>
    <string name="vip_complete">会员保存成功</string>
    <string name="vip_exist">这个会员已经存在</string>
    <string name="vip_unexist">此会员不存在</string>

    <string name="get_incomplete">请完整填写信息</string>

    <string name="search_vip">查看会员卡</string>
    <string name="search_gift">查看礼品卡</string>
    <string name="add_new_card">添加新卡</string>
    <string name="vip_copy">打印</string>
    <string name="recharge">充值</string>
    <string name="operator">操作者</string>
    <string name="change_no_table">不能换到同一桌</string>

    <array name="week_day">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </array>

    <string name="setting_json">[{
		"subData": [{
			"name": "餐厅信息",
			"id": 1,
			"iconfont": "1"
		}, {
			"name": "员工管理",
			"id": 2,
			"iconfont": "1"
		}, {
			"name": "桌子",
			"id": 3,
			"iconfont": "1"
		}, {
			"name": "外送区域",
			"id": 4,
			"iconfont": "1"
		}, {
			"name": "图片库",
			"id": 5,
			"iconfont": "1"
		}, {
			"name": "分析",
			"id": 6,
			"iconfont": "1"
		}],
		"title": "餐厅管理"
	},
	{
		"subData": [{
			"name": "菜单编辑",
			"id": 7,
			"iconfont": "1"
		}, {
			"name": "调味指示",
			"id": 8,
			"iconfont": "1"
		}, {
			"name": "菜品单位",
			"id": 9,
			"iconfont": "1"
		}, {
			"name": "菜序名",
			"id": 10,
			"iconfont": "1"
		}, {
			"name": "促销策略",
			"id": 11,
			"iconfont": "1"
		}, {
			"name": "按时计费",
			"id": 12,
			"iconfont": "1"
		}, {
			"name": "订单类型",
			"id": 13,
			"iconfont": "1"
		}],
		"title": "菜品管理"
	},
	{
		"subData": [{
			"name": "物品",
			"id": 14,
			"iconfont": "1"
		}, {
			"name": "渠道",
			"id": 15,
			"iconfont": "1"
		}, {
			"name": "管理",
			"id": 16,
			"iconfont": "1"
		}],
		"title": "库存管理"
	},
	{
		"subData": [{
			"name": "税费",
			"id": 17,
			"iconfont": "1"
		}, {
			"name": "折扣",
			"id": 18,
			"iconfont": "1"
		}, {
			"name": "加收",
			"id": 19,
			"iconfont": "1"
		}, {
			"name": "付费类型",
			"id": 20,
			"iconfont": "1"
		}, {
			"name": "收银机",
			"id": 21,
			"iconfont": "1"
		}],
		"title": "价格与付费"
	},
	{
		"subData": [{
			"name": "税费",
			"id": 22,
			"iconfont": "1"
		}, {
			"name": "折扣",
			"id": 23,
			"iconfont": "1"
		}, {
			"name": "加收",
			"id": 24,
			"iconfont": "1"
		}, {
			"name": "付费类型",
			"id": 25,
			"iconfont": "1"
		}, {
			"name": "收银机",
			"id": 26,
			"iconfont": "1"
		}],
		"title": "顾客管理"
	},
	{
		"subData": [{
			"name": "打印机设备",
			"id": 27,
			"iconfont": "1"
		}, {
			"name": "打印设备",
			"id": 28,
			"iconfont": "1"
		}, {
			"name": "整合功能应用",
			"id": 29,
			"iconfont": "1"
		}, {
			"name": "客屏显",
			"id": 30,
			"iconfont": "1"
		}, {
			"name": "远程协助",
			"id": 31,
			"iconfont": "1"
		}, {
			"name": "设置",
			"id": 32,
			"iconfont": "1"
		}],
		"title": "系统设置"
	}
]</string>

    <array name="more_array">
        <item>礼品卡</item>
        <item>会员卡</item>
        <item>报表</item>
        <item>编辑桌子</item>
    </array>
</resources>
