<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="24dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_home_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_price"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


    <TextView
        android:id="@+id/tv_home_time_old"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_time_old"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


    <TextView
        android:id="@+id/tv_home_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_id"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


    <TextView
        android:id="@+id/tv_home_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_time"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    <Button
        android:id="@+id/tv_home_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_number"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


    <TextView
        android:id="@+id/tv_home_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_status"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />

    <TextView
        android:id="@+id/tv_home_start_preorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_order"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />


    <TextView
        android:id="@+id/tv_home_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_customer_name"
        android:textSize="20sp"
        style="@style/txt_bottom"
        />
    </LinearLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:src="@mipmap/halleat_refresh"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
