<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/ll_remarks_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/get_history"
            android:textColor="@color/text_yellow_00"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_dining_hall_red"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            >

            <TextView
                style="@style/tv_history"
                android:layout_weight="1.6"
                android:text="@string/home_time"
                />

            <TextView
                style="@style/tv_history"
                android:layout_weight="1"
                android:text="@string/use_integral"
                />

            <TextView
                style="@style/tv_history"
                android:layout_weight="1"
                android:text="@string/history_balance"
                />

            <TextView
                style="@style/tv_history"
                android:layout_weight="1"
                android:text="@string/balance"
                />

            <TextView
                style="@style/tv_history"
                android:layout_weight="1"
                android:text="@string/operator"
                />

            <TextView
                style="@style/tv_history"
                android:layout_weight="1.6"
                android:text="@string/tv_order"
                />



        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dialog_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>
