<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/ll_remarks_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_customer_info"
            android:textColor="@color/text_yellow_00"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/username"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_username"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/surname"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_surname"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/birth"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_birth"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/tel"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_tel"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/email"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_email"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                style="@style/tv_customer_left"
                android:text="@string/address"
                />

            <TextView
                style="@style/tv_customer"
                android:id="@+id/tv_customer_address"
                />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
